Fri Oct 25 13:08:26 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/interp.rb : Revise the interpreter interface in order
	  to make evaluation modes of notification and side-effects suppression
	  are orthogonal.
	* lib/adlint/cc1/option.rb : Ditto.
	* lib/adlint/cc1/expr.rb : Ditto.
	* lib/adlint/exam/c_builtin/cc1_check.rb : Ditto.

Thu Oct 24 11:16:20 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/syntax.rb : Add equals sign to the init-declarator
	  node in AST.
	* lib/adlint/cc1/parser.y : Ditto.
	* spec/adlint/cc1/ctrlexpr_spec.rb : Ditto.

Wed Oct 16 17:50:37 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/exam.rb : Clip code-exam passivation feature into
	  Examination::Passivation module in order to easily create passive
	  code-exam classes.

Fri Oct 11 18:34:19 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/expr.rb : Add event notifications in order to cover
	  all kinds of expression evaluations.
	* lib/adlint/cc1/interp.rb : Ditto.
	* lib/adlint/cc1/mediator.rb : Ditto.

	* lib/adlint/cc1/value.rb : Add ScalarValueFactory#of_null method to
	  confine a knowledge about representation of NULL to one place.

Thu Sep 19 16:55:45 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/syntax.rb : Fix incomplete expression-constancy check
	  under the constraits of ISO C99 standard.

Fri Sep 13 16:51:25 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.rc : 3.2.3
	  - Relax limitation of filename of the exam-package catalog.
	  - Fix code metric measurement so that metrics of the function defined
	    in the header file can be measured.
	  - Add templates for gcc 4.4.7 on CentOS 6.4 (x86_64).

Fri Sep 13 15:53:25 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/exam/c_builtin/cc1_metric.rb : Fix code metric measurement
	  in order to output FL_STMT and FL_FUNC metrics correctly.
